<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_lend"
            android:icon="@drawable/lendicon"
            android:title="@string/lend"
            />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_request"
            android:title="Requests"
            />
        <item
            android:id="@+id/nav_viewbl"
            android:icon="@drawable/view"
            android:title="@string/view_borrowed_lended_items"
            />

    </group>

    </menu>
